@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2007-2011, Troy D. Hanson   http://uthash.sourceforge.net
+Copyright (c) 2007-2012, Troy D. Hanson   http://uthash.sourceforge.net
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -24,7 +24,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #ifndef UTLIST_H
 #define UTLIST_H
 
-#define UTLIST_VERSION 1.9.4
+#define UTLIST_VERSION 1.9.5
 
 #include <assert.h>
 
