@@ -68,6 +68,7 @@ test63: LL_CONCAT test
 test64: DL_CONCAT test
 test65: LRU cache example courtesy of jehiah.cz with modifications
 test66: test example where output variable to HASH_FIND needs extra parens
+test67: test utarray_prev
 
 Other Make targets
 ================================================================================
